modified:   src/pages/404.astro

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -56,9 +56,9 @@ const schema: WithContext<Thing> = {
   isPartOf: {
     "@type": "WebSite",
     url: `${Astro.site}`,
-    name: "DataNova",
+    name: "The Yellow",
     description:
-      "DataNova Analytics Inc. provides advanced analytics for Excel to help businesses unlock actionable insights quickly with no coding required.",
+      "The Yellow, A software company.",
   },
 };
 ---
